<resources>
    <string name="app_name">RecipeFinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="button_lunch">Lunch</string>
    <string name="button_dinner">Dinner</string>
    <string name="button_brunch">Brunch</string>
    <string name="button_soups">Soups</string>
    <string name="button_dessert">Dessert</string>
    <string name="button_baking">Baking</string>

    <string name="brunch_title">Brunch</string>
    <string name="soups_title">Soups</string>
    <string name="drinks_title">Drinks</string>
    <string name="lunch_title">Lunch</string>
    <string name="dinner_title">Dinner</string>
    <string name="dessert_title">Dessert</string>
    <string name="baking_title">Baking</string>
    <string name="app_title">My Recipe Finder</string>
    <string name="add_recipe_header">Add Recipe</string>
    <string name="take_photos">Take a photo</string>
    <string name="add_photos">Add photo from device</string>
    <string name="select_photos">Click to add photos</string>
    <string name="done">Done</string>
    <string name="button_all_recipes">All Recipes</string>
    <string name="button_drinks">Drinks</string>
    <string name="all_recipes_title">All Recipes</string>

</resources>
