<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEEE5">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_all_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchAllRecipesFragment"
        android:text="@string/button_all_recipes"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"
        app:layout_constraintBottom_toTopOf="@+id/button_lunch"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toLeftOf="@id/button_drinks"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchDrinksFragment"
        android:text="@string/button_drinks"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"
        app:layout_constraintBottom_toTopOf="@+id/button_dinner"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toRightOf="@+id/button_all_recipes"
        app:layout_constraintRight_toRightOf="@+id/button_brunch"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <Button
        android:id="@+id/button_brunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchBrunchFragment"
        android:text="@string/button_brunch"
        android:textAllCaps="false"

        app:fontFamily="@font/della_respira"
        app:layout_constraintBottom_toTopOf="@+id/button_dessert"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/button_drinks"
        app:layout_constraintRight_toLeftOf="@id/button_soups"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_soups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchSoupsFragment"
        android:text="@string/button_soups"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"
        app:layout_constraintBottom_toTopOf="@+id/button_baking"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toRightOf="@+id/button_brunch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchLunchFragment"
        android:text="@string/button_lunch"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"

        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_dinner"
        app:layout_constraintTop_toBottomOf="@+id/button_all_recipes"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchDinnerFragment"
        android:text="@string/button_dinner"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"

        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toRightOf="@+id/button_lunch"
        app:layout_constraintRight_toLeftOf="@+id/button_dessert"
        app:layout_constraintTop_toBottomOf="@+id/button_drinks"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchDessertFragment"
        android:text="@string/button_dessert"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"

        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/button_dinner"
        app:layout_constraintRight_toLeftOf="@id/button_baking"
        app:layout_constraintTop_toBottomOf="@+id/button_brunch"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_baking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:onClick="launchBakingFragment"
        android:text="@string/button_baking"
        android:textAllCaps="false"
        app:fontFamily="@font/della_respira"

        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toRightOf="@+id/button_dessert"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_soups"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_recipes_list"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dessert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintVertical_chainStyle="spread_inside" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
